Rendering recents and popular footages ✨

--- a/src/app/components/footage-item/footage-item.component.html
+++ b/src/app/components/footage-item/footage-item.component.html
@@ -1,1 +1,4 @@
-<p>footage-item works!</p>
+<div class="footage-item">
+  <div [ngClass]="{'video-icon' : mediaType === 'video'}"></div>
+  <img [src]="imgFootage" alt="" />
+</div>
