--- a/src/app/components/list-footage/list-footage.component.html
+++ b/src/app/components/list-footage/list-footage.component.html
@@ -1,1 +1,17 @@
-<p>list-footage works!</p>
+<div class="container">
+  <div class="buttons-footage">
+    <button (click)="showPopularFootages()" [ngClass]="{'active' : isPopularFootages}">Popular footages</button>
+    <button (click)="showRecentFootages()" [ngClass]="{'active' : !isPopularFootages}">Recent footages</button>
+  </div>
+
+  <div *ngIf="isPopularFootages" class="footage-list">
+    <app-footage-item *ngFor="let footage of popularFootages?.collection?.items" [imgFootage]="footage.links[0].href"
+      [mediaType]="footage.data[0].media_type">
+    </app-footage-item>
+  </div>
+  <div *ngIf="!isPopularFootages" class="footage-list">
+    <app-footage-item *ngFor="let footage of recentFootages?.collection?.items" [imgFootage]="footage.links[0].href"
+      [mediaType]="footage.data[0].media_type">
+    </app-footage-item>
+  </div>
+</div>
