--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div class="container">
   <h1>National Aeronautics and Space Administration - NASA</h1>
-  <app-list-footage></app-list-footage>
+  <router-outlet></router-outlet>
 </div>
