--- a/src/app/components/list-footage/list-footage.component.css
+++ b/src/app/components/list-footage/list-footage.component.css
@@ -14,7 +14,7 @@
   border: 2px solid transparent;
   padding: 12px 24px;
   font-size: 1rem;
-  background-color: #34373f;
+  background-color: #4c4d53;
   color: white;
   border-radius: 14px;
   margin-right: 8px;
@@ -22,5 +22,6 @@
 }
 
 .buttons-footage button.active {
-  background-color: #4c4d53;
+  background-color: #34373f;
+  border: 2px solid #34373f;
 }
