Adding search feature ✨

--- a/src/app/components/footage-item/footage-item.component.html
+++ b/src/app/components/footage-item/footage-item.component.html
@@ -1,4 +1,4 @@
 <div class="footage-item">
   <div [ngClass]="{'video-icon' : mediaType === 'video'}"></div>
-  <img [src]="imgFootage" alt="" />
+  <img [src]="imgFootage" alt="imagen of footage" />
 </div>
