--- a/src/app/components/search-bar/search-bar.component.html
+++ b/src/app/components/search-bar/search-bar.component.html
@@ -1,4 +1,4 @@
 <div class="search-bar">
   <input type="text" placeholder="Search for ..." #filter>
-  <button type="button" (click)="getSearchValue(filter.value)">Search</button>
+  <button type="button" (click)="getSearchValue(filter)">Search</button>
 </div>
